--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ monitor_speed = 115200
 framework = arduino
 lib_deps = 
 	sekdiy/FlowMeter@^1.2.0
-	knolleary/PubSubClient@^2.8
-	256dpi/MQTT@^2.5.0
 	bblanchon/ArduinoJson@^6.19.4
+
+lib_extra_dirs = 
+	~/Documents/Arduino/libraries/MySQL_MariaDB_Generic
